# docs/swagger.json
@@ -6,7 +6,6 @@
         "contact": {},
         "version": "1.0"
     },
-    "basePath": "/",
     "paths": {
         "/api/subscription/": {
             "get": {
@@ -52,6 +51,9 @@
                                 }
                             ]
                         }
+                    },
+                    "204": {
+                        "description": "No content"
                     },
                     "400": {
                         "description": "Bad request",
